VPC_onPrem.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Infrastructure
Parameters: 
  VPCIP:
    Type: String
    Description: The CIDR for VPC
  Choice-Ami:
    Type: String
    Description: Choose the Ami image
  Choice-Instance:
    Type: String
    Description: Choose the type of instance
    
Resources:
#
# VPC to simulate on premise
#
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VPCIP
      Tags:
        - Key: Name
          Value: 'VPC_onPrem'
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt MyVPC.CidrBlock, 1, 8 ]]
      Tags:
        - Key: Name
          Value: 'MainVPConPrem'
      VpcId: !Ref MyVPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: 'MyVPC-InternetGateway'
  AttachInternetGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: MyVPC-route-public-a
  AttachPublicRouteTableA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableA
      SubnetId: !Ref PublicSubnetA
  PublicRouteA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTableA
#
  # Infrastructure
  #
  InfraEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Infra EC2 security group
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22          
      VpcId: !Ref MyVPC
  EipEC2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: MyVPC
  InfraLaunchConfig:
    Type: AWS::EC2::instance
    Properties:
      AssociatePublicIpAddress: false
      ImageId: !Ref choice-ami
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref InfraEC2SecurityGroup
  EC2Server:
    Type: AWS::EC2::instance
    Properties:
      AssociatePublicIpAddress: false
      ImageId: !Ref choice-ami
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref InfraEC2SecurityGroup
